CREATE TABLE IF NOT EXISTS user_platforms (
    user_id UUID NOT NULL,
    platform_id VARCHAR(10) NOT NULL,
    secrets TEXT DEFAULT '' NOT NULL,
    is_authenticated BOOLEAN DEFAULT FALSE NOT NULL,
    auth_ttl TIMESTAMP WITH TIME ZONE NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP NOT NULL,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP NOT NULL,
    PRIMARY KEY (user_id, platform_id),
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
    FOREIGN KEY (platform_id) REFERENCES platforms(id) ON DELETE CASCADE
);